# app/route.go
@@ -15,6 +15,7 @@ func NewRouter(referensiarsitekturController controller.ReferensiArsitekturContr
 	router.PUT("/v1/updatereferensiarsitektur/:referensiarsitekturId", referensiarsitekturController.Update)
 	router.DELETE("/v1/deletereferensiarsitektur/:referensiarsitekturId", referensiarsitekturController.Delete)
 	router.GET("/v1/referensiarsitektur/:kodeReferensi", referensiarsitekturController.FindByKodeReferensi)
+	router.GET("/v1/referensiarsitekturbyid/:referensiarsitekturId", referensiarsitekturController.FindById)
 
 	router.PanicHandler = exception.ErrorHandler
 
